refactor: change application name to DIALS (Data Inspector for Anomalous Lumi-Sections)
Replace every instance of "dqmdc-ml4ad", "ml4ad" and "mlplayground" in code-base and documentation to "dials".

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "newmlplayground"
+name = "dials"
 version = "0.1.0"
 description = ""
 authors = ["Gabriel Moreira <gabrielmscampos@gmail.com>"]
