--- a/frontend/.env-cmdrc
+++ b/frontend/.env-cmdrc
@@ -4,7 +4,7 @@
     "REACT_APP_API_URL": "http://localhost:8000/api/v1",
     "REACT_APP_OIDC_AUTHORITY": "https://keycloak-qa.cern.ch/auth/realms/cern/",
     "REACT_APP_OIDC_SCOPE": "openid profile email",
-    "REACT_APP_OIDC_PUBLIC_CLIENT_ID": "dqmdc-ml4ad-public-app"
+    "REACT_APP_OIDC_PUBLIC_CLIENT_ID": "cms-dqmdc-dials-public-app"
   },
   "staging": {
     "REACT_APP_ENV": "staging",
@@ -15,9 +15,9 @@
   },
   "prod": {
     "REACT_APP_ENV": "prod",
-    "REACT_APP_API_URL": "https://dqmdc-ml4ad-api.web.cern.ch/api/v1",
+    "REACT_APP_API_URL": "https://dials-api.web.cern.ch/api/v1",
     "REACT_APP_OIDC_AUTHORITY": "https://auth.cern.ch/auth/realms/cern/",
     "REACT_APP_OIDC_SCOPE": "openid profile email",
-    "REACT_APP_OIDC_PUBLIC_CLIENT_ID": "dqmdc-ml4ad-public-app"
+    "REACT_APP_OIDC_PUBLIC_CLIENT_ID": "cms-dqmdc-dials-public-app"
   }
 }
