--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
     volumes:
       - ./backend/:/home/app/rest_api
       - /mnt/nanodqmio:/mnt/nanodqmio
-    command: bash -c 'cd mlplayground && python3 manage.py runserver 0.0.0.0:8000'
+    command: bash -c 'cd dials && python3 manage.py runserver 0.0.0.0:8000'
     network_mode: "host"
 
   django_celery_worker1_dev:
@@ -38,7 +38,7 @@ services:
     volumes:
       - ./backend/:/home/app/rest_api
       - /mnt/nanodqmio:/mnt/nanodqmio
-    command: bash -c 'cd mlplayground && celery -A mlplayground worker -l INFO -c 1 -n worker1 -Q dqmio_file_indexer_queue'
+    command: bash -c 'cd dials && celery -A dials worker -l INFO -c 1 -n worker1 -Q dqmio_file_indexer_queue'
     entrypoint: ''
     depends_on:
       - django_rest_api_dev
@@ -50,7 +50,7 @@ services:
     volumes:
       - ./backend/:/home/app/rest_api
       - /mnt/nanodqmio:/mnt/nanodqmio
-    command: bash -c 'cd mlplayground && celery -A mlplayground worker -l INFO -c 1 -n worker2 -Q dqmio_etl_queue'
+    command: bash -c 'cd dials && celery -A dials worker -l INFO -c 1 -n worker2 -Q dqmio_etl_queue'
     entrypoint: ''
     depends_on:
       - django_rest_api_dev
@@ -62,7 +62,7 @@ services:
     volumes:
       - ./backend/:/home/app/rest_api
       - /mnt/nanodqmio:/mnt/nanodqmio
-    command: bash -c 'cd mlplayground && celery -A mlplayground worker -l INFO -n worker3 -Q celery_periodic'
+    command: bash -c 'cd dials && celery -A dials worker -l INFO -n worker3 -Q celery_periodic'
     entrypoint: ''
     depends_on:
       - django_rest_api_dev
@@ -74,7 +74,7 @@ services:
     volumes:
       - ./backend/:/home/app/rest_api
       - /mnt/nanodqmio:/mnt/nanodqmio
-    command: bash -c 'cd mlplayground && celery -A mlplayground beat -l INFO'
+    command: bash -c 'cd dials && celery -A dials beat -l INFO'
     entrypoint: ''
     depends_on:
       - django_rest_api_dev
