--- a/oc/prod/image_stream.yaml
+++ b/oc/prod/image_stream.yaml
@@ -2,35 +2,37 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   name: backend
-  namespace: dials-prod
+  namespace: cms-dials-prod
 spec:
   lookupPolicy:
     local: false
   tags:
     - name: latest
       annotations:
-        openshift.io/imported-from: gabrielmscampos/dials-backend-base
+        openshift.io/imported-from: registry.cern.ch/cms-dqmdc/dials-backend-base
       from:
         kind: DockerImage
-        name: gabrielmscampos/dials-backend-base
+        name: registry.cern.ch/cms-dqmdc/dials-backend-base
       referencePolicy:
         type: Local
+      pullSecret: cern-registry-credentials
 
 ---
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   name: frontend
-  namespace: dials-prod
+  namespace: cms-dials-prod
 spec:
   lookupPolicy:
     local: false
   tags:
     - name: latest
       annotations:
-        openshift.io/imported-from: gabrielmscampos/dials-frontend
+        openshift.io/imported-from: registry.cern.ch/cms-dqmdc/dials-frontend
       from:
         kind: DockerImage
-        name: gabrielmscampos/dials-frontend
+        name: registry.cern.ch/cms-dqmdc/dials-frontend
       referencePolicy:
         type: Local
+      pullSecret: cern-registry-credentials
