--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -10,7 +10,7 @@
 #    Optionally you can modified it yourself an run PostgresSQL and Redis from it and remove the network_mode
 #    but make sure to expose all the necessary ports and check the links between containers
 #
-# 3. This file also assumes that nanoDQMIO files are stored under the path "/mnt/nanodqmio" in the host
+# 3. This file also assumes that DQMIO files are stored under the path "/mnt/dqmio" in the host
 #    you can modify this location as you wish, remember to also modify the path in .env
 #    if the application is also going to look for the files anywhere else
 
@@ -24,7 +24,7 @@ services:
     # ports: # Not needed when network mode is set to host
     #   - 8000:8000
     volumes:
-      - /mnt/nanodqmio:/mnt/nanodqmio
+      - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'cd dials && python3 -m gunicorn dials.asgi:application -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000'
     network_mode: "host"
     env_file: ./backend/.env.prod
@@ -33,7 +33,7 @@ services:
     container_name: django_celery_worker1_prod
     image: backend_prod
     volumes:
-      - /mnt/nanodqmio:/mnt/nanodqmio
+      - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'cd dials && celery -A dials worker -l INFO -c 1 -n worker1 -Q dqmio_file_indexer_queue'
     entrypoint: ''
     depends_on:
@@ -45,7 +45,7 @@ services:
     container_name: django_celery_worker2_prod
     image: backend_prod
     volumes:
-      - /mnt/nanodqmio:/mnt/nanodqmio
+      - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'cd dials && celery -A dials worker -l INFO -c 1 -n worker2 -Q dqmio_etl_queue'
     entrypoint: ''
     depends_on:
@@ -58,7 +58,7 @@ services:
     image: backend_prod
     volumes:
       - ./backend/:/home/app/rest_api
-      - /mnt/nanodqmio:/mnt/nanodqmio
+      - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'cd dials && celery -A dials worker -l INFO -n worker3 -Q celery_periodic'
     entrypoint: ''
     depends_on:
@@ -70,7 +70,7 @@ services:
     container_name: django_celery_beat_prod
     image: backend_prod
     volumes:
-      - /mnt/nanodqmio:/mnt/nanodqmio
+      - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'cd dials && celery -A dials beat -l INFO'
     entrypoint: ''
     depends_on:
