--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@
 #    Optionally you can modified it yourself an run PostgresSQL and Redis from it and remove the network_mode
 #    but make sure to expose all the necessary ports and check the links between containers
 #
-# 3. This file also assumes that nanoDQMIO files are stored under the path "/mnt/nanodqmio" in the host
+# 3. This file also assumes that DQMIO files are stored under the path "/mnt/dqmio" in the host
 #    you can modify this location as you wish, remember to also modify the path in .env
 #    if the application is also going to look for the files anywhere else
 
@@ -28,7 +28,7 @@ services:
     #   - 8000:8000
     volumes:
       - ./backend/:/home/app/rest_api
-      - /mnt/nanodqmio:/mnt/nanodqmio
+      - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'cd dials && python3 manage.py runserver 0.0.0.0:8000'
     network_mode: "host"
 
@@ -37,7 +37,7 @@ services:
     image: backend_dev
     volumes:
       - ./backend/:/home/app/rest_api
-      - /mnt/nanodqmio:/mnt/nanodqmio
+      - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'cd dials && celery -A dials worker -l INFO -c 1 -n worker1 -Q dqmio_file_indexer_queue'
     entrypoint: ''
     depends_on:
@@ -49,7 +49,7 @@ services:
     image: backend_dev
     volumes:
       - ./backend/:/home/app/rest_api
-      - /mnt/nanodqmio:/mnt/nanodqmio
+      - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'cd dials && celery -A dials worker -l INFO -c 1 -n worker2 -Q dqmio_etl_queue'
     entrypoint: ''
     depends_on:
@@ -61,7 +61,7 @@ services:
     image: backend_dev
     volumes:
       - ./backend/:/home/app/rest_api
-      - /mnt/nanodqmio:/mnt/nanodqmio
+      - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'cd dials && celery -A dials worker -l INFO -n worker3 -Q celery_periodic'
     entrypoint: ''
     depends_on:
@@ -73,7 +73,7 @@ services:
     image: backend_dev
     volumes:
       - ./backend/:/home/app/rest_api
-      - /mnt/nanodqmio:/mnt/nanodqmio
+      - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'cd dials && celery -A dials beat -l INFO'
     entrypoint: ''
     depends_on:
