--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ python-keycloak = "^3.7.0"
 python-dotenv = "^1.0.1"
 uvicorn = "^0.27.0.post1"
 gunicorn = "^21.2.0"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
