refactor: update entire project structure to better manage project's tools (poetry, yarn, pre-commit, ...)
Update Dockerfiles according to modification.

Add `react-app-rewired` to change default app folder from `src` to `frontend/src` and public from `public` to `frontend/public` without ejecting webpack config.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
+# Python
 __pycache__
 *.pyc
 *.pyo
@@ -19,3 +20,14 @@ coverage.xml
 .pytest_cache
 .hypothesis
 .env*
+
+# Javascript
+**/node_modules/
+**/dist
+.git
+npm-debug.log
+.coverage
+.coverage.*
+.env
+.aws
+**/build/
