--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -20,72 +20,55 @@ services:
   django_rest_api_prod:
     container_name: django_rest_api_prod
     image: backend_prod
-    build: ./backend
-    # ports: # Not needed when network mode is set to host
-    #   - 8000:8000
+    build:
+      dockerfile: backend/Dockerfile
+      context: .
     volumes:
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'cd dials && python3 -m gunicorn dials.asgi:application -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000'
+    command: bash -c 'python3 -m gunicorn dials.asgi:application -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000'
     network_mode: "host"
-    env_file: ./backend/.env.prod
+    env_file: ./backend/.env.dev-prod
 
   django_celery_worker1_prod:
     container_name: django_celery_worker1_prod
     image: backend_prod
     volumes:
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'cd dials && celery -A dials worker -l INFO -c 1 -n worker1 -Q dqmio_file_indexer_queue'
-    entrypoint: ''
-    depends_on:
-      - django_rest_api_prod
+    command: bash -c 'celery -A dials worker -l INFO -c 1 -n worker1 -Q dqmio_file_indexer_queue'
     network_mode: "host"
-    env_file: ./backend/.env.prod
+    env_file: ./backend/.env.dev-prod
 
   django_celery_worker2_prod:
     container_name: django_celery_worker2_prod
     image: backend_prod
     volumes:
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'cd dials && celery -A dials worker -l INFO -c 1 -n worker2 -Q dqmio_etl_queue'
-    entrypoint: ''
-    depends_on:
-      - django_rest_api_prod
+    command: bash -c 'celery -A dials worker -l INFO -c 1 -n worker2 -Q dqmio_etl_queue'
     network_mode: "host"
-    env_file: ./backend/.env.prod
+    env_file: ./backend/.env.dev-prod
 
   django_celery_worker3_prod:
     container_name: django_celery_worker3_prod
     image: backend_prod
     volumes:
-      - ./backend/:/home/app/rest_api
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'cd dials && celery -A dials worker -l INFO -n worker3 -Q celery_periodic'
-    entrypoint: ''
-    depends_on:
-      - django_rest_api_prod
+    command: bash -c 'celery -A dials worker -l INFO -n worker3 -Q celery_periodic'
     network_mode: "host"
-    env_file: ./backend/.env.prod
+    env_file: ./backend/.env.dev-prod
 
   django_celery_beat_prod:
     container_name: django_celery_beat_prod
     image: backend_prod
     volumes:
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'cd dials && celery -A dials beat -l INFO'
-    entrypoint: ''
-    depends_on:
-      - django_rest_api_prod
+    command: bash -c 'celery -A dials beat -l INFO'
     network_mode: "host"
-    env_file: ./backend/.env.prod
+    env_file: ./backend/.env.dev-prod
 
   frontend_prod:
     container_name: frontend_prod
     image: frontend_prod
     build:
-      context: ./frontend
-      dockerfile: Dockerfile.prod
-    # ports: # Not needed when network mode is set to host
-    #   - 8081:8081
-    depends_on:
-      - django_rest_api_prod
+      dockerfile: frontend/Dockerfile.prod
+      context: .
     network_mode: "host"
