--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,16 +20,15 @@ services:
     container_name: django_rest_api_dev
     image: backend_dev
     build:
-      context: ./backend
+      dockerfile: backend/Dockerfile
+      context: .
       args:
         - UID
         - GID
-    # ports: # Not needed when network mode is set to host
-    #   - 8000:8000
     volumes:
       - ./backend/:/home/app/rest_api
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'cd dials && python3 manage.py runserver 0.0.0.0:8000'
+    command: bash -c 'python3 manage.py runserver 0.0.0.0:8000'
     network_mode: "host"
 
   django_celery_worker1_dev:
@@ -38,10 +37,7 @@ services:
     volumes:
       - ./backend/:/home/app/rest_api
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'cd dials && celery -A dials worker -l INFO -c 1 -n worker1 -Q dqmio_file_indexer_queue'
-    entrypoint: ''
-    depends_on:
-      - django_rest_api_dev
+    command: bash -c 'celery -A dials worker -l INFO -c 1 -n worker1 -Q dqmio_file_indexer_queue'
     network_mode: "host"
 
   django_celery_worker2_dev:
@@ -50,10 +46,7 @@ services:
     volumes:
       - ./backend/:/home/app/rest_api
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'cd dials && celery -A dials worker -l INFO -c 1 -n worker2 -Q dqmio_etl_queue'
-    entrypoint: ''
-    depends_on:
-      - django_rest_api_dev
+    command: bash -c 'celery -A dials worker -l INFO -c 1 -n worker2 -Q dqmio_etl_queue'
     network_mode: "host"
 
   django_celery_worker3_dev:
@@ -62,10 +55,7 @@ services:
     volumes:
       - ./backend/:/home/app/rest_api
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'cd dials && celery -A dials worker -l INFO -n worker3 -Q celery_periodic'
-    entrypoint: ''
-    depends_on:
-      - django_rest_api_dev
+    command: bash -c 'celery -A dials worker -l INFO -n worker3 -Q celery_periodic'
     network_mode: "host"
 
   django_celery_beat_dev:
@@ -74,25 +64,18 @@ services:
     volumes:
       - ./backend/:/home/app/rest_api
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'cd dials && celery -A dials beat -l INFO'
-    entrypoint: ''
-    depends_on:
-      - django_rest_api_dev
+    command: bash -c 'celery -A dials beat -l INFO'
     network_mode: "host"
 
   frontend_dev:
     container_name: frontend_dev
     image: frontend_dev
     build:
-      context: ./frontend
+      dockerfile: frontend/Dockerfile
+      context: .
       args:
         - UID
         - GID
-    # ports: # Not needed when network mode is set to host
-    #   - 3000:3000
     volumes:
-      - ./frontend/:/home/app/web
-    command: bash -c "yarn run start"
-    depends_on:
-      - django_rest_api_dev
+      - ./frontend/:/home/app/web/frontend
     network_mode: "host"
