--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -6,9 +6,15 @@ FROM node:20.11-bookworm as builder
 
 WORKDIR /usr/src/app
 
-COPY . /usr/src/app/
+COPY package.json /usr/src/app/
+COPY yarn.lock /usr/src/app/
 
-RUN yarn install && yarn build:prod
+RUN yarn install
+
+COPY config-overrides.js /usr/src/app/
+COPY frontend /usr/src/app/frontend
+
+RUN yarn build
 
 ###############################
 # FINAL IMAGE
@@ -17,7 +23,7 @@ RUN yarn install && yarn build:prod
 FROM nginx:stable-alpine
 
 COPY --from=builder /usr/src/app/build /usr/share/nginx/html
-COPY --from=builder /usr/src/app/nginx/nginx.conf /etc/nginx/nginx.conf
+COPY --from=builder /usr/src/app/frontend/nginx/nginx.conf /etc/nginx/nginx.conf
 
 RUN chmod -R 777 /var/log/nginx /var/cache/nginx /var/run \
      && chgrp -R 0 /etc/nginx \
