--- a/oc/prod/deployment.yaml
+++ b/oc/prod/deployment.yaml
@@ -39,7 +39,7 @@ spec:
             - bash
             - '-c'
             - >-
-              cd dials && python3 -m gunicorn
+              python3 -m gunicorn
               dials.asgi:application -k uvicorn.workers.UvicornWorker -b
               0.0.0.0:8000
           env:
@@ -187,7 +187,7 @@ spec:
             - bash
             - '-c'
             - >-
-              cd dials && celery -A dials worker -l INFO -c 1 -n
+              celery -A dials worker -l INFO -c 1 -n
               worker1 -Q dqmio_file_indexer_queue
           env:
             - name: DJANGO_ENV
@@ -334,7 +334,7 @@ spec:
             - bash
             - '-c'
             - >-
-              cd dials && celery -A dials worker -l INFO -c 1 -n
+              celery -A dials worker -l INFO -c 1 -n
               worker2 -Q dqmio_etl_queue
           env:
             - name: DJANGO_ENV
@@ -481,7 +481,7 @@ spec:
             - bash
             - '-c'
             - >-
-              cd dials && celery -A dials worker -l INFO -c 4 -n
+              celery -A dials worker -l INFO -c 4 -n
               worker3 -Q celery_periodic
           env:
             - name: DJANGO_ENV
@@ -628,7 +628,7 @@ spec:
             - bash
             - '-c'
             - >-
-              cd dials && celery -A dials beat -l INFO -s
+              celery -A dials beat -l INFO -s
               /tmp/celerybeat-schedule
           env:
             - name: DJANGO_ENV
