--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,7 @@ psutil = "^5.9.8"
 matplotlib = "^3.8.3"
 
 [tool.poe.tasks]
-start-dev = "./scripts/start-dev.sh"
-migrate = "./scripts/migrate.sh"
-reset-local-redis = "./scripts/reset-local-redis.sh"
+start-dev = "./backend/scripts/start-dev.sh"
 
 [build-system]
 requires = ["poetry-core"]
