--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "frontend/src/index.js",
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "REACT_APP_ENV=production react-app-rewired build"
+    "build": "REACT_APP_ENV=production react-app-rewired build",
+    "lint": "eslint frontend --fix"
   },
   "dependencies": {
     "axios": "^1.6.5",
