--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,10 @@ django-celery-results = "^2.5.1"
 django-filter = "^23.5"
 django-cors-headers = "^4.3.1"
 python-keycloak = "^3.7.0"
-python-dotenv = "^1.0.1"
 uvicorn = "^0.27.0.post1"
 gunicorn = "^21.2.0"
 requests = "^2.31.0"
+python-decouple = "^3.8"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
