--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -11,7 +11,9 @@ COPY yarn.lock /usr/src/app/
 
 RUN yarn install
 
-COPY config-overrides.js /usr/src/app/
+COPY .eslintignore $APP_HOME
+COPY .eslintrc.js $APP_HOME
+COPY vite.config.js /usr/src/app/
 COPY frontend /usr/src/app/frontend
 
 RUN yarn build
@@ -22,7 +24,7 @@ RUN yarn build
 
 FROM nginx:stable-alpine
 
-COPY --from=builder /usr/src/app/build /usr/share/nginx/html
+COPY --from=builder /usr/src/app/frontend/build /usr/share/nginx/html
 COPY --from=builder /usr/src/app/frontend/nginx/nginx.conf /etc/nginx/nginx.conf
 
 RUN chmod -R 777 /var/log/nginx /var/cache/nginx /var/run \
