--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "browserslist": "> 0.25%, not dead",
   "dependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.3.1",
@@ -26,11 +25,10 @@
     "react-plotly.js": "^2.6.0",
     "react-resize-detector": "^10.0.1",
     "react-router-dom": "^6.21.3",
-    "react-toastify": "^10.0.4",
-    "vite": "^5.1.6",
-    "vite-plugin-svgr": "^4.2.0"
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -41,7 +39,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.2.4",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite": "^5.1.6",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "engines": {
     "node": ">=20.11.0, <21.0.0"
