chore: add start-flow tasks to pyproject toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ ruff = "^0.3.2"
 
 [tool.poe.tasks]
 start-dev = "./backend/scripts/start-dev.sh"
+start-flower = "./backend/scripts/start-flower.sh"
 
 [tool.ruff]
 exclude = [
