--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,8 +16,53 @@
 version: '3'
 
 services:
-  django_rest_api_dev:
-    container_name: django_rest_api_dev
+  celery_beat_dev:
+    container_name: celery_beat_dev
+    image: backend_dev
+    volumes:
+      - ./backend/:/home/app/rest_api
+      - /mnt/dqmio:/mnt/dqmio
+    command: bash -c 'celery --app=dials beat --loglevel=INFO --schedule=celerybeat-schedule'
+    network_mode: "host"
+
+  celery_worker_periodic_dev:
+    container_name: celery_worker_periodic_dev
+    image: backend_dev
+    volumes:
+      - ./backend/:/home/app/rest_api
+      - /mnt/dqmio:/mnt/dqmio
+    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=2 --autoscale=4,2 --hostname=periodic_worker --queues=periodic_scheduler'
+    network_mode: "host"
+
+  celery_worker_indexer_dev:
+    container_name: celery_worker_indexer_dev
+    image: backend_dev
+    volumes:
+      - ./backend/:/home/app/rest_api
+      - /mnt/dqmio:/mnt/dqmio
+    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=1 --autoscale=1,0 --hostname=indexer_worker --queues=etl_file_indexer'
+    network_mode: "host"
+
+  celery_worker_bulk_dev:
+    container_name: celery_worker_bulk_dev
+    image: backend_dev
+    volumes:
+      - ./backend/:/home/app/rest_api
+      - /mnt/dqmio:/mnt/dqmio
+    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=1 --autoscale=2,0 --hostname=etl_bulk_worker --queues=etl_bulk_ingestion'
+    network_mode: "host"
+
+  celery_worker_priority_dev:
+    container_name: celery_worker_priority_dev
+    image: backend_dev
+    volumes:
+      - ./backend/:/home/app/rest_api
+      - /mnt/dqmio:/mnt/dqmio
+    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=1 --autoscale=2,0 --hostname=etl_priority_worker --queues=etl_priority_ingestion'
+    network_mode: "host"
+
+  django_restapi_dev:
+    container_name: django_restapi_dev
     image: backend_dev
     build:
       dockerfile: backend/Dockerfile
@@ -29,42 +74,6 @@ services:
       - ./backend/:/home/app/rest_api
       - /mnt/dqmio:/mnt/dqmio
     command: bash -c 'python3 manage.py runserver 0.0.0.0:8000'
-    network_mode: "host"
-
-  django_celery_worker1_dev:
-    container_name: django_celery_worker1_dev
-    image: backend_dev
-    volumes:
-      - ./backend/:/home/app/rest_api
-      - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'celery -A dials worker -l INFO -c 1 -n worker1 -Q dqmio_file_indexer_queue'
-    network_mode: "host"
-
-  django_celery_worker2_dev:
-    container_name: django_celery_worker2_dev
-    image: backend_dev
-    volumes:
-      - ./backend/:/home/app/rest_api
-      - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'celery -A dials worker -l INFO -c 1 -n worker2 -Q dqmio_etl_queue'
-    network_mode: "host"
-
-  django_celery_worker3_dev:
-    container_name: django_celery_worker3_dev
-    image: backend_dev
-    volumes:
-      - ./backend/:/home/app/rest_api
-      - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'celery -A dials worker -l INFO -n worker3 -Q celery_periodic'
-    network_mode: "host"
-
-  django_celery_beat_dev:
-    container_name: django_celery_beat_dev
-    image: backend_dev
-    volumes:
-      - ./backend/:/home/app/rest_api
-      - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'celery -A dials beat -l INFO'
     network_mode: "host"
 
   frontend_dev:
