--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -31,7 +31,7 @@ services:
     image: backend_prod
     volumes:
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=2 --autoscale=4,2 --hostname=periodic_worker --queues=periodic_scheduler'
+    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=2 --autoscale=4,2 --max-tasks-per-child=1 --hostname=periodic_worker --queues=periodic_scheduler'
     network_mode: "host"
     env_file: ./backend/.env.dev-prod
 
@@ -40,7 +40,7 @@ services:
     image: backend_prod
     volumes:
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=1 --autoscale=1,0 --hostname=indexer_worker --queues=etl_file_indexer'
+    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=1 --autoscale=1,0 --max-tasks-per-child=1 --hostname=indexer_worker --queues=etl_file_indexer'
     network_mode: "host"
     env_file: ./backend/.env.dev-prod
 
@@ -49,7 +49,7 @@ services:
     image: backend_prod
     volumes:
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=1 --autoscale=2,0 --hostname=etl_bulk_worker --queues=etl_bulk_ingestion'
+    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=1 --autoscale=2,0 --max-tasks-per-child=1 --hostname=etl_bulk_worker --queues=etl_bulk_ingestion'
     network_mode: "host"
     env_file: ./backend/.env.dev-prod
 
@@ -58,7 +58,7 @@ services:
     image: backend_prod
     volumes:
       - /mnt/dqmio:/mnt/dqmio
-    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=1 --autoscale=2,0 --hostname=etl_priority_worker --queues=etl_priority_ingestion'
+    command: bash -c 'celery --app=dials worker --loglevel=INFO --concurrency=1 --autoscale=2,0 --max-tasks-per-child=1 --hostname=etl_priority_worker --queues=etl_priority_ingestion'
     network_mode: "host"
     env_file: ./backend/.env.dev-prod
 
