--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,11 @@ python-decouple = "^3.8"
 django-debreach = "^2.1.0"
 django-csp = "^3.8"
 django-permissions-policy = "^4.19.0"
+sqlalchemy = "^2.0.29"
+alembic = "^1.13.1"
+pandas = "^2.2.1"
+paramiko = "^3.4.0"
+scp = "^0.14.5"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
