--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,12 @@ readme = "README.md"
 python = "^3.10"
 django = "^5.0.1"
 djangorestframework = "^3.14.0"
-drf-spectacular = "^0.27.0"
-django-celery-results = "^2.5.1"
 django-filter = "^23.5"
 django-cors-headers = "^4.3.1"
 django-debreach = "^2.1.0"
 django-csp = "^3.8"
 django-permissions-policy = "^4.19.0"
+dj-database-url = "^2.1.0"
 psycopg2-binary = "^2.9.9"
 celery = "^5.3.6"
 redis = "^5.0.1"
@@ -40,8 +39,8 @@ matplotlib = "^3.8.3"
 ruff = "^0.3.2"
 
 [tool.poe.tasks]
-start-dev = "./backend/scripts/start-dev.sh"
-start-flower = "./backend/scripts/start-flower.sh"
+start-api = "./backend/scripts/start-dev.sh"
+start-etl = "./etl/scripts/start-dev.sh"
 start-monitor = "./scripts/monitor-pid.py"
 
 [tool.ruff]
