chore: organize python dependencies in groups

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+python-decouple = "^3.8"
+psycopg2-binary = "^2.9.9"
+requests = "^2.31.0"
+
+[tool.poetry.group.backend.dependencies]
 django = "^5.0.1"
 djangorestframework = "^3.14.0"
 django-filter = "^23.5"
@@ -15,20 +20,19 @@ django-debreach = "^2.1.0"
 django-csp = "^3.8"
 django-permissions-policy = "^4.19.0"
 dj-database-url = "^2.1.0"
-psycopg2-binary = "^2.9.9"
-celery = "^5.3.6"
-redis = "^5.0.1"
 python-keycloak = "^3.7.0"
 uvicorn = "^0.27.0.post1"
 gunicorn = "^21.2.0"
-python-decouple = "^3.8"
-requests = "^2.31.0"
+
+[tool.poetry.group.etl.dependencies]
+celery = "^5.3.6"
+redis = "^5.0.1"
+celery-redbeat = "^2.2.0"
 sqlalchemy = "^2.0.29"
 alembic = "^1.13.1"
 pandas = "^2.2.1"
 paramiko = "^3.4.0"
 scp = "^0.14.5"
-celery-redbeat = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
