refactor: read databases and engines from environment variable and set config during alembic runtime

--- a/etl/alembic.ini
+++ b/etl/alembic.ini
@@ -60,27 +60,18 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# This is used to configure the SQLAlchemy part of the migration
-# Please, do not fill in the placeholders
-# The credentials are taken during runtime in `env.py` loaded from `alembic-conig.json`
-# But you still need to add an entry here for each new database
+# Databases to migrate
+# Note: Will be filled automatically based on the environment variables and Alembic's env.py
+#
+# Example
+# databases = engine1
 
-databases = csc, ecal, hcal, jetmet, tracker
-
-[csc]
-sqlalchemy.url = driver://user:pass@localhost/table
-
-[ecal]
-sqlalchemy.url = driver://user:pass@localhost/table
-
-[hcal]
-sqlalchemy.url = driver://user:pass@localhost/table
-
-[jetmet]
-sqlalchemy.url = driver://user:pass@localhost/table
-
-[tracker]
-sqlalchemy.url = driver://user:pass@localhost/table
+# Engines for each database
+# Note: Will be filled automatically based on the environment variables and Alembic's env.py
+#
+# Example:
+# [engine1]
+# sqlalchemy.url = driver://user:pass@localhost/table
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
